--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 30m
-  url: "ssh://git@github.com:billm/moria-ops.git"
+  url: "ssh://git@github.com/billm/moria-ops.git"
   secretRef:
     name: github-deploy-key
   ref:
