--- a/kubernetes/apps/network/cloudflared/app/kustomization.yaml
+++ b/kubernetes/apps/network/cloudflared/app/kustomization.yaml
@@ -2,9 +2,9 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # - ./dnsendpoint.yaml
-  # - ./secret.sops.yaml
-  # - ./helmrelease.yaml
+  - ./dnsendpoint.yaml
+  - ./secret.sops.yaml
+  - ./helmrelease.yaml
 configMapGenerator:
   - name: cloudflared-configmap
     files:
