--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -13,5 +13,6 @@ resources:
   - ./spegel.yaml
   - ./stakater.yaml
   - ./external-dns.yaml
+  - ./external-secrets.yaml
   - ./ingress-nginx.yaml
   - ./k8s-gateway.yaml
