--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -38,7 +38,7 @@ spec:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}"
         ingressClassName: internal
         host:
-          name: rook.${SECRET_DOMAIN}"
+          name: rook.${SECRET_DOMAIN}
           path: /
     toolbox:
       enabled: true
