--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -16,6 +16,6 @@ resources:
   - ./piraeus.yaml
   - ./postfinance.yaml
   - ./prometheus-community.yaml
-  - ./rook-ceph.yaml
+  #- ./rook-ceph.yaml
   - ./spegel.yaml
   - ./stakater.yaml
