--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -61,6 +61,11 @@ spec:
             enabled: true
       network:
         provider: host
+        addressRanges:
+          public:
+            - "192.168.133.0/24"
+          cluster:
+            - "192.168.133.0/24"
         connections:
           requireMsgr2: true
       storage:
