--- a/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/node-feature-discovery/app/helmrelease.yaml
@@ -28,6 +28,10 @@ spec:
     worker:
       config:
         core:
-          sources: ["pci", "system", "usb"]
+          sources: ["pci", "system", "usb", "cpu", "custom"]
+    sources:
+      usb:
+        deviceClassWhitelist: ["02", "03", "0e", "ef", "fe", "ff"]
+        deviceLabelFields: ["class", "vendor", "device"]
     prometheus:
       enable: true
