(feat) Add plex...maybe

--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -5,8 +5,11 @@ metadata:
     namespace: flux-system
 stringData:
     SECRET_DOMAIN: ENC[AES256_GCM,data:yjYZ/kJvi8lv,iv:thTjAfVTBYEmdcmMSQTapb4YWSz3SlrtEqR0kfIwpck=,tag:zwIM/pMTB5MEfDTGlVxEKA==,type:str]
+    SECRET_LEGACY_DOMAIN: ENC[AES256_GCM,data:ApCDVuc+ACtYYJO3AMk=,iv:UDDL8NOsUJsLygSG6MuOc4yZtp1rU3iXMU1T8XRVpH4=,tag:wH0Yd1Zcpl/TUDmmd7Av5g==,type:str]
+    SECRET_BUSINESS_DOMAIN: ENC[AES256_GCM,data:Th3wf50Y+R3dglIZMmX5DiQ1rg==,iv:xoYud6u4+/UK2nLtsa+pACQKTz020toOjWn8D+Iugb8=,tag:+phIirpfCUjxtxNbfCR/Jg==,type:str]
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:Uf8BuhyHTdG9gdU1ecq7xQzptQ/fgy8npi6YsWvU12qcEw==,iv:ma3p+aJs1G4Hkh/MO72xabbPm00x+8PuZp605Xd3qj4=,tag:T3GY3VCtCVtNU1L9lDhTkg==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:A+S/zfV7FS14ygRHVDTlwNsUqB8gH4pqj3k5QhSB+KNZYhk3,iv:rp7/sMjP63z7cddxEADj2JSshTwOs8/9tUiKBjLEvqM=,tag:EAc6TLACvZHhazNXHCZu9g==,type:str]
+    SECRET_NFS_SERVER: ENC[AES256_GCM,data:J0VP8HrfPdBfKRkHScSVw8jpHbPFzCxjL1p4fVg=,iv:DJGmANbrenXc/AstrzOQWSyUjVqChMt0tULVtUdtF38=,tag:xh+mOpI+xNwjw/ELw68B8g==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +25,8 @@ sops:
             SzVNazYrZGQ2RFdSMzJSTjI4b0VEd3cKnRl3+Sf2Wiq6/Wvs0Y9ckU/RfrpP6TB9
             iUAUUKSHM7erhHNYrPf+Zf/uWTzVAkyVeaVQAvDe3uB9WmDfUuL7hA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-06T18:16:42Z"
-    mac: ENC[AES256_GCM,data:DzAaEFu9WMruCaTH1ebHtc7EXqVQ/k53mkKST7FHwbx7IM3OOLj797ckYKPaZNJJ/zlDVIE58PbyzlttBlo6loXFAS5oAmJNP5M5ijAIPABY6/yr+BAb9EU6UcIUKMXprp963XoOsyambNOU3Q5BrrY9mLkjEF5co+9+H+w3CDU=,iv:7NAMVBUKECrmXcGY7vx11ifae7hGbQxBcRPysZRvSgc=,tag:Mlyvs7tukXRg+WCYJ9GjAg==,type:str]
+    lastmodified: "2024-07-26T14:44:44Z"
+    mac: ENC[AES256_GCM,data:bCLgk4FtSTucTN5zFCWOkAaey/y8bT7dHulF9lOVwu5qRQbJsER6BpbREjaULw/bRMvg7fR94wnq90W60e4ebrCY/5de4Ivq/BRL5IDzPQgAnJc/PFneMemL08DAmDIF6ZJw9waErJac/GqB2PtNxBQPlG4Z0rCfesirkZu+oLY=,iv:AG7/OGH41WMBHIPGcIdUyiYsG/IwLr1UGa8es6uB5qM=,tag:4RAcT+V5dhtwdFgLNhyo7A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
