--- a/kubernetes/templates/volsync/minio.yaml
+++ b/kubernetes/templates/volsync/minio.yaml
@@ -20,30 +20,30 @@ spec:
   dataFrom:
     - extract:
         key: volsync-minio-template
----
-# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/volsync.backube/replicationdestination_v1alpha1.json
-apiVersion: volsync.backube/v1alpha1
-kind: ReplicationDestination
-metadata:
-  name: "${APP}-bootstrap"
-spec:
-  trigger:
-    manual: restore-once
-  restic:
-    copyMethod: Snapshot
-    repository: "${APP}-volsync-minio"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}"
-    cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
-    cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
-    storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
-    volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
-    moverSecurityContext:
-      runAsUser: ${APP_UID:-2000}
-      runAsGroup: ${APP_GID:-2000}
-      fsGroup: ${APP_GID:-2000}
-    accessModes:
-      - "${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"
-    capacity: "${VOLSYNC_CAPACITY:-1Gi}"
+# ---
+# # yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/volsync.backube/replicationdestination_v1alpha1.json
+# apiVersion: volsync.backube/v1alpha1
+# kind: ReplicationDestination
+# metadata:
+#   name: "${APP}-bootstrap"
+# spec:
+#   trigger:
+#     manual: restore-once
+#   restic:
+#     copyMethod: Snapshot
+#     repository: "${APP}-volsync-minio"
+#     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}"
+#     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
+#     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
+#     storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
+#     volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
+#     moverSecurityContext:
+#       runAsUser: ${APP_UID:-2000}
+#       runAsGroup: ${APP_GID:-2000}
+#       fsGroup: ${APP_GID:-2000}
+#     accessModes:
+#       - "${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"
+#     capacity: "${VOLSYNC_CAPACITY:-1Gi}"
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/volsync.backube/replicationsource_v1alpha1.json
 apiVersion: volsync.backube/v1alpha1
