--- a/kubernetes/templates/volsync/minio.yaml
+++ b/kubernetes/templates/volsync/minio.yaml
@@ -49,7 +49,7 @@ spec:
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationSource
 metadata:
-  name: "${APP}-minio"
+  name: "${APP}"
 spec:
   sourcePVC: "${APP}"
   trigger:
