--- a/kubernetes/templates/volsync/r2.yaml
+++ b/kubernetes/templates/volsync/r2.yaml
@@ -34,7 +34,7 @@ spec:
   restic:
     copyMethod: Snapshot
     repository: "${APP}-volsync-r2"
-    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-ccsi-ceph-blockpool}"
+    cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-csi-ceph-blockpool}"
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-1Gi}"
     storageClassName: "${VOLSYNC_STORAGECLASS:-ceph-block}"
