--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -128,4 +128,4 @@ spec:
         path: /volume1/Media
         globalMounts:
           - path: /data/media
-            readonly: true
+            readOnly: true
