--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -33,21 +33,6 @@ spec:
       plex:
         annotations:
           reloader.stakater.com/auto: "true"
-
-        pod:
-          nodeSelector:
-            intel.feature.node.kubernetes.io/gpu: "true"
-          securityContext:
-            runAsUser: 2000
-            runAsGroup: 2000
-            runAsNonRoot: true
-            fsGroup: 2000
-            fsGroupChangePolicy: OnRootMismatch
-            seccompProfile: { type: RuntimeDefault }
-            supplementalGroups:
-              - 44 # video
-              - 109 # render
-
         containers:
           app:
             image:
@@ -61,15 +46,27 @@ spec:
               PLEX_ADVERTISE_URL: https://${SVC_PLEX}:32400,https://{{ .Release.Name }}.${SECRET_DOMAIN}:443
               PLEX_NO_AUTH_NETWORKS: 192.168.0.0/16
             probes:
-              liveness:
+              liveness: &probes
                 enabled: true
-              readiness:
-                enabled: true
+                custom: true
+                spec:
+                  httpGet:
+                    path: /identity
+                    port: 32400
+                  initialDelaySeconds: 0
+                  periodSeconds: 10
+                  timeoutSeconds: 1
+                  failureThreshold: 3
+              readiness: *probes
               startup:
                 enabled: true
                 spec:
                   failureThreshold: 30
-                  periodSeconds: 5
+                  periodSeconds: 10
+            securityContext:
+              allowPrivilegeEscalation: false
+              readOnlyRootFilesystem: true
+              capabilities: { drop: ["ALL"] }
             resources:
               requests:
                 cpu: 100m
@@ -78,6 +75,20 @@ spec:
               limits:
                 gpu.intel.com/i915: 1
                 memory: 9248M
+
+    defaultPodOptions:
+      nodeSelector:
+        intel.feature.node.kubernetes.io/gpu: "true"
+      securityContext:
+        runAsUser: 2000
+        runAsGroup: 2000
+        runAsNonRoot: true
+        fsGroup: 2000
+        fsGroupChangePolicy: OnRootMismatch
+        seccompProfile: { type: RuntimeDefault }
+        supplementalGroups:
+          - 44 # video
+          - 109 # render
 
     service:
       app:
@@ -94,6 +105,7 @@ spec:
       app:
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+          nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         className: internal
         hosts:
           - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
@@ -106,10 +118,8 @@ spec:
     persistence:
       config:
         existingClaim: plex
-        advancedMounts:
-          plex:
-            app:
-              - path: /config
+        globalMounts:
+          - path: /config/Library/Application Support/Plex Media Server
       cache:
         existingClaim: plex-cache
         globalMounts:
