--- a/kubernetes/apps/default/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/default/plex/app/helmrelease.yaml
@@ -70,10 +70,10 @@ spec:
             resources:
               requests:
                 cpu: 100m
-                gpu.intel.com/i915: 1
+                #gpu.intel.com/i915: 1
                 memory: 9248M
               limits:
-                gpu.intel.com/i915: 1
+                #gpu.intel.com/i915: 1
                 memory: 9248M
 
     defaultPodOptions:
