(feat): enable ceph orhcestrator

--- a/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/app/helmrelease.yaml
@@ -30,6 +30,7 @@ spec:
     csi:
       cephFSKernelMountOptions: ms_mode=prefer-crc
       enableLiveness: true
+      enableDiscoveryDaemon: true
       serviceMonitor:
         enabled: true
     monitoring:
