--- a/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/rook-ceph/rook-ceph/cluster/helmrelease.yaml
@@ -59,6 +59,8 @@ spec:
         modules:
           - name: pg_autoscaler
             enabled: true
+          - name: rook
+            enabled: true
       network:
         provider: host
         addressRanges:
