--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -12,3 +12,4 @@ data:
   SVC_EXTERNAL_INGRESS: 192.168.135.2
   SVC_INTERNAL_INGRESS: 192.168.135.3
   SVC_PLEX: 192.168.135.4
+  SVC_POSTGRES: 192.168.135.5
