--- a/kubernetes/apps/default/pgadmin/app/helmrelease.yaml
+++ b/kubernetes/apps/default/pgadmin/app/helmrelease.yaml
@@ -87,7 +87,7 @@ spec:
           gethomepage.dev/name: *app
           gethomepage.dev/icon: si-postgresql
         hosts:
-          - host: "{{ .Release.Name }}.${SECRET_INTERNAL_DOMAIN}"
+          - host: "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
               - path: /
                 service:
