fix: small homepage cleanup

--- a/kubernetes/apps/default/homepage/app/externalsecret.yaml
+++ b/kubernetes/apps/default/homepage/app/externalsecret.yaml
@@ -11,36 +11,29 @@ spec:
     name: onepassword-connect
   target:
     name: homepage-secret
-    template:
-      engineVersion: v2
-      data:
-        # Generics
-        HOMEPAGE_VAR_LATITUDE: "{{ .HASS_LATITUDE }}"
-        HOMEPAGE_VAR_LONGITUDE: "{{ .HASS_LONGITUDE }}"
-
-        ## HASS
-        HOMEPAGE_VAR_HASS_TOKEN: "{{ .PROMETHEUS_TOKEN }}"
-
-        ## Media
-        HOMEPAGE_VAR_BAZARR_TOKEN: "{{ .BAZARR__API_KEY }}"
-        HOMEPAGE_VAR_JELLYFIN_TOKEN: "{{ .JELLYFIN__HOMEPAGE_API_KEY }}"
-        HOMEPAGE_VAR_LIDARR_TOKEN: "{{ .LIDARR__API_KEY }}"
-        HOMEPAGE_VAR_RADARR_TOKEN: "{{ .RADARR__API_KEY }}"
-        HOMEPAGE_VAR_SONARR_TOKEN: "{{ .SONARR__API_KEY }}"
-  dataFrom:
-    - extract:
-        key: bazarr
-    - extract:
-        key: cloudnative-pg
-    - extract:
-        key: homepage
-    - extract:
-        key: home-assistant
-    - extract:
-        key: jellyfin
-    - extract:
-        key: lidarr
-    - extract:
-        key: radarr
-    - extract:
-        key: sonarr
+  data:
+  # TODO fix bazarr
+  - secretKey: HOMEPAGE_VAR_BAZARR_TOKEN
+    remoteRef:
+      key: radarr
+      property: api_key
+  - secretKey: HOMEPAGE_VAR_RADARR_TOKEN
+    remoteRef:
+      key: radarr
+      property: api_key
+  - secretKey: HOMEPAGE_VAR_SONARR_TOKEN
+    remoteRef:
+      key: sonarr
+      property: api_key
+  - secretKey: HOMEPAGE_VAR_LATITUDE
+    remoteRef:
+      key: homeassistant
+      property: latitude
+  - secretKey: HOMEPAGE_VAR_LONGITUDE
+    remoteRef:
+      key: homeassistant
+      property: longitude
+  - secretKey: HOMEPAGE_VAR_HASS_TOKEN
+    remoteRef:
+      key: homeassistant
+      property: prometheus_token
