--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -13,3 +13,4 @@ data:
   SVC_INTERNAL_INGRESS: 192.168.135.3
   SVC_PLEX: 192.168.135.4
   SVC_POSTGRES: 192.168.135.5
+  SVC_VALHEIM: 192.168.135.6
