--- a/kubernetes/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/apps/default/valheim/app/helmrelease.yaml
@@ -82,7 +82,7 @@ spec:
 
     ingress:
       app:
-        className: "nginx-external"
+        className: external
         hosts:
           - host: &host "valheim.${SECRET_DOMAIN}"
             paths:
