--- a/kubernetes/apps/default/redlib/app/helmrelease.yaml
+++ b/kubernetes/apps/default/redlib/app/helmrelease.yaml
@@ -30,8 +30,11 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/auricom/redlib
-              tag: 0.35.1@sha256:e2712d88dfa3e9ff765bb16142101b653364130f9e6c94aa862199ad36be1b6b
+              repository: quay.io/redlib/redlib
+              tag: latest@sha256:a7d6de74290f250daf54d3da105fbcbcab2356dc107ad08635d86f89a98472ae
+              #repository: ghcr.io/auricom/redlib
+              #tag: 0.35.1@sha256:e2712d88dfa3e9ff765bb16142101b653364130f9e6c94aa862199ad36be1b6b
+
             env:
               REDLIB_DEFAULT_SHOW_NSFW: on
               REDLIB_DEFAULT_THEME: dark
