--- a/kubernetes/apps/network/netalertx/app/helmrelease.yaml
+++ b/kubernetes/apps/network/netalertx/app/helmrelease.yaml
@@ -42,7 +42,7 @@ spec:
           app:
             image:
               repository: jokobsk/netalertx
-              tag: 24.9.12@sha256:e6b469628ddf4b7342d2ed4484aaffe6c580fae7887a6d9f5e5a2f4d6c17718e
+              tag: 24.9.12
             resources:
               requests:
                 cpu: 10m
