fix: don't try to use the same pvc in two mounts

--- a/kubernetes/apps/network/netalertx/app/helmrelease.yaml
+++ b/kubernetes/apps/network/netalertx/app/helmrelease.yaml
@@ -74,9 +74,7 @@ spec:
         existingClaim: netalertx
         globalMounts:
           - path: /app/config
-            subPath: config
       data:
-        existingClaim: netalertx
+        existingClaim: netalertx-db
         globalMounts:
           - path: /app/db
-            subPath: db
