--- a/kubernetes/apps/default/readarr/app/externalsecret.yaml
+++ b/kubernetes/apps/default/readarr/app/externalsecret.yaml
@@ -17,8 +17,9 @@ spec:
         READARR__POSTGRES__PORT: "5432"
         READARR__POSTGRES__USER: &dbUser "{{ .postgres_username }}"
         READARR__POSTGRES__PASSWORD: &dbPass "{{ .postgres_password }}"
-        READARR__POSTGRES__MAINDB: &dbName readarr_main
-        INIT_POSTGRES_DBNAME: *dbName
+        READARR__POSTGRES__MAIN_DB: readarr_main
+        READARR__POSTGRES__LOG_DB: readarr_log
+        INIT_POSTGRES_DBNAME: readarr_main readarr_log
         INIT_POSTGRES_HOST: *dbHost
         INIT_POSTGRES_USER: *dbUser
         INIT_POSTGRES_PASS: *dbPass
