--- a/kubernetes/apps/default/readarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr/app/helmrelease.yaml
@@ -47,7 +47,6 @@ spec:
               tag: 0.3.32.2587@sha256:1ffa6357a1e0f2dd9c608a1a2d4064e09b76d834059dda38414c734146cfa201
             env:
               READARR__INSTANCE_NAME: Readarr
-              READARR__PORT: &port 80
               READARR__LOG_LEVEL: info
               READARR__APP__THEME: dark
               READARR__AUTH__METHOD: External
@@ -65,7 +64,7 @@ spec:
                 spec:
                   httpGet:
                     path: /ping
-                    port: *port
+                    port: &port 8787
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
