chore: homepage updates

--- a/kubernetes/apps/default/homepage/app/config/bookmarks.yaml
+++ b/kubernetes/apps/default/homepage/app/config/bookmarks.yaml
@@ -1,1 +1,6 @@
 ---
+- Kubernetes:
+  - kubesearch:
+    - href: https://kubesearch.dev/
+  - Cluster Template:
+    - href: https://github.com/onedr0p/cluster-template
