--- a/kubernetes/apps/default/homepage/app/externalsecret.yaml
+++ b/kubernetes/apps/default/homepage/app/externalsecret.yaml
@@ -17,9 +17,21 @@ spec:
     remoteRef:
       key: radarr
       property: api_key
+  - secretKey: HOMEPAGE_VAR_PROWLARR_TOKEN
+    remoteRef:
+      key: prowlarr
+      property: api_key
+  - secretKey: HOMEPAGE_VAR_READARR_TOKEN
+    remoteRef:
+      key: readarr
+      property: api_key
   - secretKey: HOMEPAGE_VAR_RADARR_TOKEN
     remoteRef:
       key: radarr
+      property: api_key
+  - secretKey: HOMEPAGE_VAR_SABNZBD_TOKEN
+    remoteRef:
+      key: sabnzbd
       property: api_key
   - secretKey: HOMEPAGE_VAR_SONARR_TOKEN
     remoteRef:
