--- a/kubernetes/apps/default/homepage/app/config/services.yaml
+++ b/kubernetes/apps/default/homepage/app/config/services.yaml
@@ -15,7 +15,7 @@
         description: Subtitles Management
         widget:
             type: bazarr
-            url: http://bazarr.default.svc.cluster.local.:6767
+            url: http://bazarr.default.svc.cluster.local:6767
             key: {{HOMEPAGE_VAR_BAZARR_TOKEN}}
     - Prowlarr:
         href: https://prowlarr.${SECRET_DOMAIN}
@@ -23,7 +23,7 @@
         description: Movies
         widget:
             type: prowlarr
-            url: http://prowlarr.default.svc.cluster.local.:80
+            url: http://prowlarr.default.svc.cluster.local:80
             key: {{HOMEPAGE_VAR_PROWLARR_TOKEN}}
     - Radarr:
         href: https://radarr.${SECRET_DOMAIN}
@@ -31,7 +31,7 @@
         description: Movies
         widget:
             type: radarr
-            url: http://radarr.default.svc.cluster.local.:80
+            url: http://radarr.default.svc.cluster.local:80
             key: {{HOMEPAGE_VAR_RADARR_TOKEN}}
             enableQueue: true
     - Readarr:
@@ -40,7 +40,7 @@
         description: Books
         widget:
             type: readarr
-            url: http://readarr.default.svc.cluster.local.:8787
+            url: http://readarr.default.svc.cluster.local:8787
             key: {{HOMEPAGE_VAR_READARR_TOKEN}}
     - SABnzbd:
         href: https://sabnzbd.${SECRET_DOMAIN}
@@ -48,7 +48,7 @@
         description: Usenet Downloader
         widget:
             type: sabnzbd
-            url: http://sabnzbd.default.svc.cluster.local.:80
+            url: http://sabnzbd.default.svc.cluster.local:80
             key: {{HOMEPAGE_VAR_SABNZBD_TOKEN}}
     - Sonarr:
         href: https://sonarr.${SECRET_DOMAIN}
@@ -56,7 +56,7 @@
         description: TV Shows
         widget:
             type: sonarr
-            url: http://sonarr.default.svc.cluster.local.:80
+            url: http://sonarr.default.svc.cluster.local:80
             key: {{HOMEPAGE_VAR_SONARR_TOKEN}}
             enableQueue: true
 # - Calendar:
