--- a/kubernetes/apps/default/homepage/app/config/settings.yaml
+++ b/kubernetes/apps/default/homepage/app/config/settings.yaml
@@ -5,27 +5,27 @@ theme: dark
 color: slate
 headerStyle: clean
 layout:
-  Calendar:
-    style: column
-    icon: mdi-calendar
+  # Calendar:
+  #   style: column
+  #   icon: mdi-calendar
   Media:
     style: column
     icon: mdi-play-circle
-  Infrastructure:
-    style: row
-    columns: 3
-    icon: mdi-server
-  Storage:
-    style: row
-    columns: 2
-    icon: mdi-desktop-tower
+  # Infrastructure:
+  #   style: row
+  #   columns: 3
+  #   icon: mdi-server
+  # Storage:
+  #   style: row
+  #   columns: 2
+  #   icon: mdi-desktop-tower
   Home:
     style: column
     icon: mdi-home-analytics
-  Observability:
-    style: column
-    icon: mdi-chart-line
-  Downloads:
-    style: row
-    columns: 3
-    icon: mdi-download-circle
+  # Observability:
+  #   style: column
+  #   icon: mdi-chart-line
+  # Downloads:
+  #   style: row
+  #   columns: 3
+  #   icon: mdi-download-circle
