fix: use configmap

--- a/kubernetes/apps/default/homepage/app/externalsecret.yaml
+++ b/kubernetes/apps/default/homepage/app/externalsecret.yaml
@@ -49,3 +49,15 @@ spec:
     remoteRef:
       key: homeassistant
       property: prometheus_token
+  - secretKey: HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID
+    remoteRef:
+      key: cloudflare
+      property: cf_account_id
+  - secretKey: HOMEPAGE_VAR_CLOUDFLARED_TUNNELID
+    remoteRef:
+      key: cloudflare
+      property: cf_tunnel_id
+  - secretKey: HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN
+    remoteRef:
+      key: cloudflare
+      property: apitoken
