--- a/kubernetes/apps/default/homepage/app/configmap.yaml
+++ b/kubernetes/apps/default/homepage/app/configmap.yaml
@@ -8,144 +8,184 @@ metadata:
 data:
   bookmarks.yaml: |
     - Communicate:
-        - Discord:
-            - icon: discord.png
-              href: 'https://discord.com/app'
-        - Gmail:
-            - icon: gmail.png
-              href: 'http://gmail.com'
-        - Google Calendar:
-            - icon: google-calendar.png
-              href: 'https://calendar.google.com'
-        - Outlook:
-            - icon: https://raw.githubusercontent.com/joryirving/home-ops/main/docs/src/assets/icons/outlook.png
-              href: 'https://outlook.com'
+      - Discord:
+        - icon: discord.png
+          href: 'https://discord.com/app'
+      - Gmail:
+        - icon: gmail.png
+          href: 'http://gmail.com'
+      - Google Calendar:
+        - icon: google-calendar.png
+          href: 'https://calendar.google.com'
+      - Outlook:
+        - icon: https://raw.githubusercontent.com/joryirving/home-ops/main/docs/src/assets/icons/outlook.png
+          href: 'https://outlook.com'
     - Media:
-        - YouTube:
-            - icon: youtube.png
-              href: 'https://youtube.com/feed/subscriptions'
-        - Spotify:
-            - icon: spotify.png
-              href: 'http://open.spotify.com'
-        - Youtube Music:
-            - icon: https://raw.githubusercontent.com/joryirving/home-ops/main/docs/src/assets/icons/youtube-music.png
-              href: 'https://music.youtube.com'
+      - YouTube:
+        - icon: youtube.png
+          href: 'https://youtube.com/feed/subscriptions'
+      - Spotify:
+        - icon: spotify.png
+          href: 'http://open.spotify.com'
+      - Youtube Music:
+        - icon: https://raw.githubusercontent.com/joryirving/home-ops/main/docs/src/assets/icons/youtube-music.png
+          href: 'https://music.youtube.com'
     - Reading:
-        - Beyond:
-            - icon: https://raw.githubusercontent.com/joryirving/home-ops/main/docs/src/assets/icons/beyond.png
-              href: 'https://forums.beyond.ca/search.php?do=getnew&contenttype=vBForum_Post'
-        - Western Subaru Club:
-            - icon: https://raw.githubusercontent.com/joryirving/home-ops/main/docs/src/assets/icons/wsc.png
-              href: 'http://westernsubaruclub.com/smf/index.php?action=unread'
-        - Reddit:
-            - icon: reddit.png
-              href: 'https://reddit.com'
+      - Hacker News:
+        - icon: hackernews.png
+          href: 'https://news.ycombinator.com'
     - Git:
-        - kubesearch:
-            - icon: kubernetes-dashboard.png
-              href: 'https://kubesearch.dev/'
-        - home-ops:
-            - icon: github.png
-              href: 'https://github.com/joryirving/home-ops'
+      - kubesearch:
+        - icon: kubernetes-dashboard.png
+          href: 'https://kubesearch.dev/'
+      - moria-ops:
+        - icon: github.png
+          href: 'https://github.com/billm/moria-ops'
+      - Cluster Template:
+        - href: https://github.com/onedr0p/cluster-template
   docker.yaml: ""
   kubernetes.yaml: |
     mode: cluster
   services.yaml: |
     - Network:
-        - Cloudflared:
-            href: https://dash.cloudflare.com/
-            icon: cloudflare-zero-trust.png
-            description: Cloudflared Tunnel Status
-            widget:
-              type: cloudflared
-              accountid: {{HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID}}
-              tunnelid: {{HOMEPAGE_VAR_CLOUDFLARED_TUNNELID}}
-              key: {{HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN}}
-              fields: ["status"]
-        - Healthchecks:
-            href: https://healthchecks.io/
-            icon: healthchecks.png
-            description: Healthchecks Internet Uptime
-            widget:
-              type: healthchecks
-              url: https://healthchecks.io/
-              key: {{HOMEPAGE_VAR_HEALTHCHECK_TOKEN}}
-              uuid: {{HOMEPAGE_VAR_HEALTHCHECK_UUID}}
-        # - NextDNS:
-        #     href: https://my.nextdns.io
-        #     icon: nextdns.png
-        #     description: NextDNS
+      - Cloudflared:
+        href: https://dash.cloudflare.com/
+        icon: cloudflare-zero-trust.png
+        description: Cloudflared Tunnel Status
+        widget:
+          type: cloudflared
+          accountid: {{HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID}}
+          tunnelid: {{HOMEPAGE_VAR_CLOUDFLARED_TUNNELID}}
+          key: {{HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN}}
+          fields: ["status"]
+        # - Healthchecks:
+        #     href: https://healthchecks.io/
+        #     icon: healthchecks.png
+        #     description: Healthchecks Internet Uptime
         #     widget:
-        #       type: nextdns
-        #       profile: {{HOMEPAGE_VAR_NEXTDNS_ID}}
-        #       key: {{HOMEPAGE_VAR_NEXTDNS_API}}
-        - Unifi:
-            href: https://unifi.ui.com
-            icon: unifi.png
-            description: Unifi Dashboard
-            widget:
-              type: unifi
-              url: https://unifi.${SECRET_DOMAIN}
-              username: {{HOMEPAGE_VAR_UNIFI_USERNAME}}
-              password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
-    - Games:
-        - Create:
-            icon: minecraft.png
-            description: Create Server
-            widget:
-              type: minecraft
-              url: udp://minecraft-create-minecraft.games:25565
-        - Takocraft:
-            icon: minecraft.png
-            description: Takocraft Server
-            widget:
-              type: minecraft
-              url: udp://minecraft-takocraft-minecraft.games:25565
-        - Vibecraft:
-            icon: minecraft.png
-            description: Vibecraft Server
-            widget:
-              type: minecraft
-              url: udp://minecraft-vibecraft-minecraft.games:25565
-    - Calendar:
-        - Agenda:
-            widget:
-              type: calendar
-              view: agenda # optional - possible values monthly, agenda
-              maxEvents: 15 # optional - defaults to 10
-              integrations: # optional
-                - type: sonarr # active widget type that is currently enabled on homepage - possible values: radarr, sonarr>
-                  service_group: Downloads # group name where widget exists
-                  service_name: Sonarr # service name for that widget
-                - type: radarr # active widget type that is currently enabled on homepage - possible values: radarr, sonarr>
-                  service_group: Downloads # group name where widget exists
-                  service_name: Radarr # service name for that widget
-                - type: readarr # active widget type that is currently enabled on homepage - possible values: radarr, sonar>
-                  service_group: Downloads # group name where widget exists
-                  service_name: Readarr # service name for that widget
-    - Infrastructure:
-        - Portainer:
-            href: &url https://portainer.${SECRET_DOMAIN}
-            icon: portainer.png
-            description: Docker Container Management
-            widget:
-              type: portainer
-              url: http://voyager.internal:9090
-              env: 1
-              key: {{HOMEPAGE_VAR_PORTAINER_TOKEN}}
-        - Unraid:
-            href: https://nas.${SECRET_DOMAIN}
-            icon: unraid.png
-            description: Unraid NAS
-    - Home:
-        - Home-Assistant:
-            href: https://hass.${SECRET_DOMAIN}
-            icon: home-assistant.png
-            description: Home Automation Software
-            widget:
-              type: homeassistant
-              url: https://hass.${SECRET_DOMAIN}
-              key: {{HOMEPAGE_VAR_HASS_TOKEN}}
+        #       type: healthchecks
+        #       url: https://healthchecks.io/
+        #       key: {{HOMEPAGE_VAR_HEALTHCHECK_TOKEN}}
+        #       uuid: {{HOMEPAGE_VAR_HEALTHCHECK_UUID}}
+        # - Unifi:
+        #     href: https://unifi.ui.com
+        #     icon: unifi.png
+        #     description: Unifi Dashboard
+        #     widget:
+        #       type: unifi
+        #       url: https://unifi.${SECRET_DOMAIN}
+        #       username: {{HOMEPAGE_VAR_UNIFI_USERNAME}}
+        #       password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
+    - Media:
+      - Bazarr:
+        icon: bazarr.png
+        href: https://bazarr.${SECRET_DOMAIN}
+        description: Subtitles Management
+        widget:
+          type: bazarr
+          url: http://bazarr.default.svc.cluster.local:6767
+          key: {{HOMEPAGE_VAR_BAZARR_TOKEN}}
+      - Prowlarr:
+        href: https://prowlarr.${SECRET_DOMAIN}
+        icon: prowlarr.png
+        description: Movies
+        widget:
+          type: prowlarr
+          url: http://prowlarr.default.svc.cluster.local:80
+          key: {{HOMEPAGE_VAR_PROWLARR_TOKEN}}
+      - Radarr:
+        href: https://radarr.${SECRET_DOMAIN}
+        icon: radarr.png
+        description: Movies
+        widget:
+          type: radarr
+          url: http://radarr.default.svc.cluster.local:80
+          key: {{HOMEPAGE_VAR_RADARR_TOKEN}}
+          enableQueue: true
+      - Readarr:
+        href: https://readarr.${SECRET_DOMAIN}
+        icon: readarr.png
+        description: Books
+        widget:
+          type: readarr
+          url: http://readarr.default.svc.cluster.local:8787
+          key: {{HOMEPAGE_VAR_READARR_TOKEN}}
+      - SABnzbd:
+        href: https://sabnzbd.${SECRET_DOMAIN}
+        icon: sabnzbd.png
+        description: Usenet Downloader
+        widget:
+          type: sabnzbd
+          url: http://sabnzbd.default.svc.cluster.local:80
+          key: {{HOMEPAGE_VAR_SABNZBD_TOKEN}}
+      - Sonarr:
+        href: https://sonarr.${SECRET_DOMAIN}
+        icon: sonarr.png
+        description: TV Shows
+        widget:
+          type: sonarr
+          url: http://sonarr.default.svc.cluster.local:80
+          key: {{HOMEPAGE_VAR_SONARR_TOKEN}}
+          enableQueue: true
+
+    # - Games:
+    #     - Create:
+    #         icon: minecraft.png
+    #         description: Create Server
+    #         widget:
+    #           type: minecraft
+    #           url: udp://minecraft-create-minecraft.games:25565
+    #     - Takocraft:
+    #         icon: minecraft.png
+    #         description: Takocraft Server
+    #         widget:
+    #           type: minecraft
+    #           url: udp://minecraft-takocraft-minecraft.games:25565
+    #     - Vibecraft:
+    #         icon: minecraft.png
+    #         description: Vibecraft Server
+    #         widget:
+    #           type: minecraft
+    #           url: udp://minecraft-vibecraft-minecraft.games:25565
+    # - Calendar:
+    #     - Agenda:
+    #         widget:
+    #           type: calendar
+    #           view: agenda # optional - possible values monthly, agenda
+    #           maxEvents: 15 # optional - defaults to 10
+    #           integrations: # optional
+    #             - type: sonarr # active widget type that is currently enabled on homepage - possible values: radarr, sonarr>
+    #               service_group: Downloads # group name where widget exists
+    #               service_name: Sonarr # service name for that widget
+    #             - type: radarr # active widget type that is currently enabled on homepage - possible values: radarr, sonarr>
+    #               service_group: Downloads # group name where widget exists
+    #               service_name: Radarr # service name for that widget
+    #             - type: readarr # active widget type that is currently enabled on homepage - possible values: radarr, sonar>
+    #               service_group: Downloads # group name where widget exists
+    #               service_name: Readarr # service name for that widget
+    # - Infrastructure:
+    #     - Portainer:
+    #         href: &url https://portainer.${SECRET_DOMAIN}
+    #         icon: portainer.png
+    #         description: Docker Container Management
+    #         widget:
+    #           type: portainer
+    #           url: http://voyager.internal:9090
+    #           env: 1
+    #           key: {{HOMEPAGE_VAR_PORTAINER_TOKEN}}
+    #     - Unraid:
+    #         href: https://nas.${SECRET_DOMAIN}
+    #         icon: unraid.png
+    #         description: Unraid NAS
+    # - Home:
+    #     - Home-Assistant:
+    #         href: https://hass.${SECRET_DOMAIN}
+    #         icon: home-assistant.png
+    #         description: Home Automation Software
+    #         widget:
+    #           type: homeassistant
+    #           url: https://hass.${SECRET_DOMAIN}
+    #           key: {{HOMEPAGE_VAR_HASS_TOKEN}}
   settings.yaml: |
     title: Dashboard
     favicon: https://github.com/walkxcode/dashboard-icons/blob/main/png/heimdall.png
@@ -205,7 +245,7 @@ data:
         target: _blank
     - greeting:
         text_size: xl
-        text: "Howdy Hey!"
+        text: "Greetings, Citizen."
     - kubernetes:
         cluster:
           cpu: true
@@ -229,7 +269,7 @@ data:
           timeStyle: short
           dateStyle: short
           hourCycle: h23
-    - unifi_console:
-        url: https://192.168.1.1:443
-        username: {{HOMEPAGE_VAR_UNIFI_USERNAME}}
-        password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
+    # - unifi_console:
+    #     url: https://192.168.1.1:443
+    #     username: {{HOMEPAGE_VAR_UNIFI_USERNAME}}
+    #     password: {{HOMEPAGE_VAR_UNIFI_PASSWORD}}
