fix: tweaks for valheim supervisor

--- a/kubernetes/apps/default/valheim/app/helmrelease.yaml
+++ b/kubernetes/apps/default/valheim/app/helmrelease.yaml
@@ -90,7 +90,6 @@ spec:
           gethomepage.dev/group: "Game Servers"
           gethomepage.dev/name: Valheim
           gethomepage.dev/icon: https://cdn2.steamgriddb.com/icon/a0b83c02d720415dada82e08bc09e9f3/32/256x256.png
-          gethomepage.dev/href: "http://valheim.${SECRET_DOMAIN}:9001"
 
         hosts:
           - host: &host "valheim.${SECRET_DOMAIN}"
@@ -98,7 +97,7 @@ spec:
               - path: /
                 service:
                   identifier: app
-                  port: http
+                  port: supervisor
         tls:
           - hosts:
               - *host
