--- a/kubernetes/apps/default/n8n/ks.yaml
+++ b/kubernetes/apps/default/n8n/ks.yaml
@@ -3,11 +3,14 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: n8n
+  name: &app n8n
   namespace: flux-system
 spec:
-  targetNamespace: default
   path: ./kubernetes/apps/default/n8n/app
+  commonMetadata:
+    labels:
+      app.kubernetes.io/name: *app
+  targetNamespace: default
   prune: true
   sourceRef:
     kind: GitRepository
