fix: moar fixes

--- a/kubernetes/apps/default/n8n/app/externalsecret.yaml
+++ b/kubernetes/apps/default/n8n/app/externalsecret.yaml
@@ -14,10 +14,10 @@ spec:
       engineVersion: v2
       data:
         DB_TYPE: postgresdb
-        DB_POSTGRESDB_DATABASE: &dbname n8n
-        DB_POSTGRESDB_HOST: &dbhost postgres16-rw.database.svc.cluster.local
-        DB_POSTGRESDB_USER: &dbuser "{{ .postgres_username }}"
-        DB_POSTGRESDB_PASSWORD: &dbpass "{{ .postgres_password }}"
+        DB_POSTGRESDB_DATABASE: &dbName n8n
+        DB_POSTGRESDB_HOST: &dbHost postgres16-rw.database.svc.cluster.local
+        DB_POSTGRESDB_USER: &dbUser "{{ .postgres_username }}"
+        DB_POSTGRESDB_PASSWORD: &dbPass "{{ .postgres_password }}"
         DB_POSTGRESDB_PORT: "5432"
 
         INIT_POSTGRES_DBNAME: *dbName
