fix: one more fix...should standardize all these

--- a/kubernetes/apps/default/n8n/app/helmrelease.yaml
+++ b/kubernetes/apps/default/n8n/app/helmrelease.yaml
@@ -108,7 +108,7 @@ spec:
             paths:
               - path: /
                 service:
-                  identifier: n8n
+                  identifier: app
                   port: *port
         tls:
           - hosts:
