feat: add amd-device-plugin thanks to: https://github.com/cschmittiey/k8s-homelab

--- a/kubernetes/apps/kube-system/kustomization.yaml
+++ b/kubernetes/apps/kube-system/kustomization.yaml
@@ -4,6 +4,7 @@ kind: Kustomization
 resources:
   - ./namespace.yaml
   # apps
+  - ./amd-device-plugin/ks.yaml
   - ./cilium/ks.yaml
   - ./coredns/ks.yaml
   - ./intel-device-plugin/ks.yaml
