--- a/kubernetes/apps/default/n8n/app/helmrelease.yaml
+++ b/kubernetes/apps/default/n8n/app/helmrelease.yaml
@@ -99,7 +99,7 @@ spec:
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: Home
           gethomepage.dev/name: *app
-          gethomepage.dev/icon: mdi:water-flow
+          gethomepage.dev/icon: sh-n8n
 
 
         className: internal
