--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -10,6 +10,8 @@ stringData:
     SECRET_ACME_EMAIL: ENC[AES256_GCM,data:Uf8BuhyHTdG9gdU1ecq7xQzptQ/fgy8npi6YsWvU12qcEw==,iv:ma3p+aJs1G4Hkh/MO72xabbPm00x+8PuZp605Xd3qj4=,tag:T3GY3VCtCVtNU1L9lDhTkg==,type:str]
     SECRET_CLOUDFLARE_TUNNEL_ID: ENC[AES256_GCM,data:A+S/zfV7FS14ygRHVDTlwNsUqB8gH4pqj3k5QhSB+KNZYhk3,iv:rp7/sMjP63z7cddxEADj2JSshTwOs8/9tUiKBjLEvqM=,tag:EAc6TLACvZHhazNXHCZu9g==,type:str]
     SECRET_NFS_SERVER: ENC[AES256_GCM,data:J0VP8HrfPdBfKRkHScSVw8jpHbPFzCxjL1p4fVg=,iv:DJGmANbrenXc/AstrzOQWSyUjVqChMt0tULVtUdtF38=,tag:xh+mOpI+xNwjw/ELw68B8g==,type:str]
+    SECRET_LATITUDE: ENC[AES256_GCM,data:K1kx9+JUDKoKBw==,iv:TMDoDblFHFtCbPxDTTHj3TsrSJPlC4tSMdPORtU+S9g=,tag:r9Eg3Rac2DlKvETE7l83Jg==,type:str]
+    SECRET_LONGITUDE: ENC[AES256_GCM,data:y67UvSLgN/RtowE=,iv:TjGEQaxQ9YeKvO7UWU6J/YwarPKgYXWjRiElKVftxlU=,tag:w719lO4jIEZeAm1dqdQNrA==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -25,8 +27,8 @@ sops:
             SzVNazYrZGQ2RFdSMzJSTjI4b0VEd3cKnRl3+Sf2Wiq6/Wvs0Y9ckU/RfrpP6TB9
             iUAUUKSHM7erhHNYrPf+Zf/uWTzVAkyVeaVQAvDe3uB9WmDfUuL7hA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-07-26T14:44:44Z"
-    mac: ENC[AES256_GCM,data:bCLgk4FtSTucTN5zFCWOkAaey/y8bT7dHulF9lOVwu5qRQbJsER6BpbREjaULw/bRMvg7fR94wnq90W60e4ebrCY/5de4Ivq/BRL5IDzPQgAnJc/PFneMemL08DAmDIF6ZJw9waErJac/GqB2PtNxBQPlG4Z0rCfesirkZu+oLY=,iv:AG7/OGH41WMBHIPGcIdUyiYsG/IwLr1UGa8es6uB5qM=,tag:4RAcT+V5dhtwdFgLNhyo7A==,type:str]
+    lastmodified: "2024-10-29T02:54:36Z"
+    mac: ENC[AES256_GCM,data:u/fpgehD3a3pbtvyw49tAO3tuCPxsIwrv4uJaB2Y4DeZ5V3pCQGJuR6xuJbOmLKfc9LR6zjmtNK+ChvGge05zbLrB9nt1eyaQaxYN/SJWXaY5lc7AoQHjm4zybEPFkbFjgozTlRX+3ZWDMiZJhHuxv+DXWdRTvgudRYzA1XTVts=,iv:hYCBBtVFLnNMYhWzlwDbPqJ0TnVYZkyFTeJ6OAnlWGY=,tag:DdXwr2wCPOYQnJDC2D0xkQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
