fix: misc hoarder config fixes

--- a/kubernetes/apps/default/hoarder/app/externalsecret.yaml
+++ b/kubernetes/apps/default/hoarder/app/externalsecret.yaml
@@ -13,10 +13,8 @@ spec:
     template:
       engineVersion: v2
       data:
+        NEXTAUTH_SECRET: "{{ .nextauth_secret }}"
         MEILI_MASTER_KEY: "{{ .meili_master_key }}"
-        OPENAI_API_KEY: "{{ .apikey }}"
   dataFrom:
     - extract:
         key: hoarder
-    - extract:
-        key: ollama
