fix: bump limits for chrome

--- a/kubernetes/apps/default/hoarder/app/helmrelease.yaml
+++ b/kubernetes/apps/default/hoarder/app/helmrelease.yaml
@@ -84,6 +84,8 @@ spec:
               requests:
                 cpu: 50m
                 memory: 128Mi
+              limits:
+                memory: 2Gi
     service:
       app:
         controller: hoarder
