--- a/kubernetes/apps/default/readarr/app/helmrelease.yaml
+++ b/kubernetes/apps/default/readarr/app/helmrelease.yaml
@@ -96,6 +96,9 @@ spec:
         className: internal
         annotations:
           external-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
+          gethomepage.dev/enabled: "true"
+          gethomepage.dev/group: "Media"
+          gethomepage.dev/name: "Readarr"
         hosts:
           - host: readarr.${SECRET_DOMAIN}
             paths:
