--- a/kubernetes/apps/flux-system/capacitor/app/helmrelease.yaml
+++ b/kubernetes/apps/flux-system/capacitor/app/helmrelease.yaml
@@ -63,9 +63,8 @@ spec:
           hajimari.io/icon: mdi:sync
           gethomepage.dev/enabled: "true"
           gethomepage.dev/group: "Services"
-          gethomepage.dev/name: Capacitor
+          gethomepage.dev/name: "Capacitor"
           gethomepage.dev/href: "https://capacitor.${SECRET_DOMAIN}"
-
         hosts:
           - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
             paths:
